--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -10,7 +10,28 @@ html {
   scroll-behavior: smooth;
 }
 
+@keyframes appear {
+  from { opacity: 0; scale: .90; } 
+  to { opacity: 1; scale: 1; }
+}
+
+@keyframes slide-in {
+  from { opacity: 0; transform: translateX(-100px);}
+  to { opacity: 1; transform: translateX(0); }
+}
 @layer components {
+  .block {
+    animation: appear ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+  }
+
+  .slide-in {
+    animation: slide-in ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+  }
+
   .primary-btn {
     @apply mt-6 px-6 py-3 text-lg text-white rounded-lg shadow text-opacity-60;
     @apply hover:scale-110 hover:shadow-xl hover:bg-slate-800 hover:text-opacity-100 transition-all duration-200 font-sans;
