--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -11,13 +11,25 @@ html {
 }
 
 @keyframes appear {
-  from { opacity: 0; scale: .90; } 
-  to { opacity: 1; scale: 1; }
+  from {
+    opacity: 0;
+    scale: 0.9;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
 
 @keyframes slide-in {
-  from { opacity: 0; transform: translateX(-100px);}
-  to { opacity: 1; transform: translateX(0); }
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 @layer components {
   .block {
@@ -35,6 +47,9 @@ html {
   .primary-btn {
     @apply mt-6 px-6 py-3 text-lg text-white rounded-lg shadow text-opacity-60;
     @apply hover:scale-110 hover:shadow-xl hover:bg-slate-800 hover:text-opacity-100 transition-all duration-200 font-sans;
+  }
+  .contact-btn {
+    @apply border-solid border-2 border-sky-500 hover:bg-sky-500 hover:text-white active:border-sky-700 active:bg-sky-700 active:scale-100;
   }
   .navlink {
     @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
