--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -10,50 +10,41 @@ html {
   scroll-behavior: smooth;
 }
 
-@keyframes appear {
-  from {
-    opacity: 0;
-    scale: 0.9;
-  }
-  to {
-    opacity: 1;
-    scale: 1;
-  }
-}
-
-@keyframes slide-in {
-  from {
-    opacity: 0;
-    transform: translateX(-100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
 @layer components {
-  .block {
-    animation: appear ease-in-out;
-    animation-timeline: view();
-    animation-range: entry 0% cover 30%;
-  }
-
-  .slide-in {
-    animation: slide-in ease-in-out;
-    animation-timeline: view();
-    animation-range: entry 0% cover 30%;
-  }
-
   .primary-btn {
-    @apply mt-6 px-6 py-3 text-lg text-white rounded-lg shadow text-opacity-60;
-    @apply hover:scale-110 hover:shadow-xl hover:bg-slate-800 hover:text-opacity-100 transition-all duration-200 font-sans;
+    @apply mt-6 px-6 py-3 text-lg text-white rounded-lg bg-slate-800;
   }
+
   .contact-btn {
     @apply border-solid border-2 border-sky-500 hover:bg-sky-500 hover:text-white active:border-sky-700 active:bg-sky-700 active:scale-100;
+  }
+  .navlink-logo {
+    @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
   }
   .navlink {
     @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
   }
+  .navlink {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+  }
+
+  .navlink::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -1px;
+    left: 0;
+    background-color: rgb(56 189 248); /* You can customize the color */
+    transition: width 0.2s ease-in-out;
+  }
+
+  .navlink:hover::after {
+    width: 100%;
+  }
+
   .footer-links {
     @apply hover:text-white active:text-gray-400 transition duration-200;
   }
