--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -12,17 +12,14 @@ html {
 
 @layer components {
   .primary-btn {
-    @apply mt-6 px-6 py-3 text-lg text-white rounded-lg bg-slate-800;
+    @apply mt-6 px-6 py-3 text-lg text-white rounded-lg bg-slate-800 active:border-sky-700 active:bg-sky-700;
   }
 
-  .contact-btn {
-    @apply border-solid border-2 border-sky-500 hover:bg-sky-500 hover:text-white active:border-sky-700 active:bg-sky-700 active:scale-100;
-  }
   .navlink-logo {
     @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
   }
   .navlink {
-    @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
+    @apply hover:text-sky-400 transition duration-300;
   }
   .navlink {
     position: relative;
