--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -3,20 +3,29 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-900 text-gray-300 cursor-default;
+  @apply cursor-default bg-gray-900 text-gray-300;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.writing-vertical {
+  writing-mode: vertical-lr;
+}
+
 @layer components {
   .primary-btn {
-    @apply mt-6 px-6 py-3 text-lg text-white rounded-lg bg-slate-800;
+    @apply mt-6 rounded-lg bg-slate-800 px-6 py-3 text-lg text-white;
   }
 
   .navlink-logo {
-    @apply hover:text-sky-400 transition duration-300 active:text-sky-700;
+    @apply transition duration-300 hover:text-sky-400 active:text-sky-700;
   }
   .navlink {
     @apply transition duration-300 hover:text-sky-400 active:text-sky-700;
@@ -43,16 +52,16 @@ html {
   }
 
   .footer-links {
-    @apply hover:text-white active:text-gray-400 transition duration-200;
+    @apply transition duration-200 hover:text-white active:text-gray-400;
   }
   .nav-btn {
-    @apply px-4 py-1 rounded-lg border-solid border-2 border-sky-500 text-sky-500 hover:bg-sky-500 active:bg-sky-700 active:border-sky-700 hover:text-inherit transition duration-200;
+    @apply rounded-lg border-2 border-solid border-sky-500 px-4 py-1 text-sky-500 transition duration-200 hover:bg-sky-500 hover:text-inherit active:border-sky-700 active:bg-sky-700;
   }
   .wsu-img {
-    @apply inline w-16 h-14 mr-4 mb-2;
+    @apply mb-2 mr-4 inline h-14 w-16;
   }
   .ed-container {
-    @apply text-lg text-gray-400 space-y-6 font-sans;
+    @apply space-y-6 font-sans text-lg text-gray-400;
   }
   .ed-heading {
     @apply text-xl text-white;
